--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    //compile 'com.squareup.okhttp:okhttp:2.5.0'
+    //compile 'se.emilsjolander:sprinkles:1.3.1'
+    compile(name:'sprinkles-1.3.1', ext:'aar')
+
+
 }
